# pandoc

pandoc-latex-html5/: Dockerfile.example  Makefile  QUICKSTART.md  README.md  cabal.project  pandoc-latex-html5.cabal  pandoc-latex-html5.hs
src/Text/Pandoc/Readers/LaTeX/: Math.hs
