cabal-version: 2.4
name: pandoc-latex-html5
version: 0.1.0.0
synopsis: Minimal LaTeX to HTML5 converter with MathJax
description: A stripped-down version of Pandoc that only converts LaTeX to HTML5 with MathJax support
license: GPL-2.0-or-later
author: Custom Build
build-type: Simple

executable pandoc-latex-html5
  main-is: pandoc-latex-html5.hs
  
  build-depends: 
      base >= 4.18 && < 5
    , pandoc == 3.8.3
    , pandoc-types >= 1.23.1 && < 1.24
    , text >= 1.1.1.0 && < 2.2
    , doctemplates >= 0.11 && < 0.12
    , mtl >= 2.2 && < 2.4
  
  default-language: Haskell2010
  
  ghc-options: 
    -Wall
    -O2
    -threaded
    -rtsopts
    -with-rtsopts=-N
  
  -- Additional optimizations for smaller binary
  ghc-options:
    -fno-full-laziness
    -fno-cse
    -optc-Os
